Edit about page to match new mocks.

--- a/src/about.html
+++ b/src/about.html
@@ -106,27 +106,11 @@
       <div id="about-content">
         <div class="section-header">
           <div class="title">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR</div>
-          <div class="subtitle">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-          </div>
         </div>
-        <div class="section-content flexbox">
-          <div class="description">
-            Groundsource specializes in various areas throughout the greater Los Angeles areas including but not limited to:
-            <ul>
-              <li>Playa Vista</li>
-              <li>Marina Del Rey</li>
-              <li>Park West</li>
-              <li>Culver City</li>
-              <li>Venice</li>
-              <li>Santa Monica</li>
-              <li>Westwood</li>
-              <li>Beverly Hills</li>
-              <li>and many more</li>
-            </ul>
-          </div>
-          <div class="gmap-container">
-            <img class="gmap" src="images/about/gmap.jpg" />
+        <div class="section-content">
+          <div class="about">
+            <img src="images/about/about.jpg" class="about-pic"/>
+            <img src="images/about/map.png" class="map" />
           </div>
         </div>
       </div>
