Format the header text and image so that they are both flush against the bottom of the header.'

--- a/src/about.html
+++ b/src/about.html
@@ -39,7 +39,7 @@
     </div>
     <div id="container-about">
       <div id="header-about">
-        <div class="flexbox about-text">
+        <div class="about-text">
           <div class="header-image">
             <img class="image-left" src="images/about/hero.jpg" />
           </div>
