--- a/src/about.html
+++ b/src/about.html
@@ -47,7 +47,7 @@
             <div class="title head-title">ABOUT <span class="small-hidden">GROUND</span><span class="small-hidden">SOURCE</span></div>
             <p>
               GROUNDSOURCE is a Los Angeles-based full service real estate firm that specializes
-              in representing tenants, landlords, and investors. Our forty-five year of colletive
+              in representing tenants, landlords, and investors. Our forty-five year of collective
               experience in the L.A. marketplace lets us combine extensive insider knowledge with 
               trusted partnerships to create unparalleled value. We're a boutique firm that offers
               clients the prestigious service they deserve with an intimate, hands-on approach.
@@ -73,7 +73,7 @@
               Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
             </div>
             <div class="bio-button">VIEW FULL BIO</div>
-            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+            <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
           </div>
 
           <div class="agent">
@@ -86,7 +86,7 @@
               Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
             </div>
             <div class="bio-button">VIEW FULL BIO</div>
-            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+            <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
           </div>
 
           <div class="agent">
@@ -99,7 +99,7 @@
               Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
             </div>
             <div class="bio-button">VIEW FULL BIO</div>
-            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+            <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
           </div>
         </div>
       </div>
