Put the new footer in place.

--- a/src/index.html
+++ b/src/index.html
@@ -119,32 +119,23 @@
           </div>
         </div>
       </div>
-            <div id="footer">
+      <div id="footer">
         <div class="column">
-          <div class="title">SEARCH</div>
+          <div class="title">LISTINGS</div>
           <a href="#">Properties For Sale</a>
           <a href="#">Properties For Lease</a>
-          <a href="#">Find a Broker</a>
         </div>
         <div class="column">
-          <div class="title">PRODUCTS &amp; SERVICES</div>
-          <a href="#">Product Overview</a>
-          <a href="#">Premium Lister</a>
-          <a href="#">Premium Searcher</a>
+          <div class="title">EXPERIENCE</div>
+          <a href="#">Case Studies</a>
+          <a href="#">Testimonials</a>
         </div>
         <div class="column">
-          <div class="title">RESOURCES</div>
-          <a href="#">Help</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Add Listing</a>
-          <a href="#">Market Trends</a>
+          <div class="title">ABOUT</div>
+          <a href="#">Meet the Team</a>
         </div>
         <div class="column">
-          <div class="title">COMPANY</div>
-          <a href="#">About Us</a>
-          <a href="#">LoopNet Blog</a>
-          <a href="#">Terms of Use</a>
-          <a href="#">Privacy Policy</a>
+          <div class="title">CONTACT</div>
         </div>
         <div class="column social">
           <a href="#" target="_blank">
