Begin setting up the review navigator.

--- a/src/index.html
+++ b/src/index.html
@@ -68,10 +68,17 @@
         </div>
       </div>
       <div class="horizontal-break">
-        <p><strong>
-          "I work with GROUNDSOURCE because they deliver — the best market insight, the most direct relationships, and, ultimately, the best deal."
-        </strong></p>
-        <p>- Seth Phillips Althoff</p>
+        <div id="navigator-arrow-left">
+        </div>
+        <div id="navigator-arrow-right">
+        </div>
+        <div id="review-navigator">
+          <div></div>
+          <div></div>
+          <div class="selected"></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
       <div class="our-services">
           <div class="flexbox-full">
