Put review section in place.. needs to be cleaned up still!.

--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,26 @@
         </div>
       </div>
       <div class="horizontal-break">
-        <div id="navigator-arrow-left">
+        <div id="navigator-arrow-left" class="navigation-arrows">
         </div>
-        <div id="navigator-arrow-right">
+         <div id="review1" class="review">
+        </div>
+        <div id="review2" class="review">
+        </div>
+        <div id="review3" class="review selected">
+          <img src="images/sample-person.png" />
+          <p>
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
+            <br />
+            <br />
+            <strong>- Jane Doe</strong>
+          </p>
+        </div>
+         <div id="review4" class="review">
+        </div>
+        <div id="review5" class="review">
+        </div>
+        <div id="navigator-arrow-right" class="navigation-arrows">
         </div>
         <div id="review-navigator">
           <div></div>
