Begin addressing Mat's PR comments on the home page.

--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
     </div>
     <div class="content">
       <div class="flexbox">
-        <div class="col-medium header-overlap">
-            <div class="padding-80">
+        <div class="home-intro header-overlap">
+            <div>
                 <div class="section-header">
                   ABOUT &nbsp; <img src="images/logo.png" class="logo-small"/>
                 </div>
@@ -63,7 +63,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-medium">
+        <div class="home-intro">
           <img src="images/about-us.jpg" class="image-medium"/>
         </div>
       </div>
@@ -98,34 +98,38 @@
         </div>
       </div>
       <div class="our-services">
-          <div class="flexbox-full">
+          <!-- <div class="flexbox-full"> -->
             <div class="services-img">
               <img src="images/services.jpg">
             </div>
             <div class="services-info">
-              <div class="header"><p><strong>OUR</strong> SERVICES</p></div>
-              <div class="tennant-rep">
-                <div class="padded-text">
-                  <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
-                  <br />
-                  Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
-                  <br />
-                  <br />
-                  <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
-                </div>
+              <div class="services-row">
+                <div class="services-header"><p><strong>OUR</strong> SERVICES</p></div>
               </div>
-              <div class="landlord-rep">
-                <div class="padded-text">
-                  <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
-                  <br />
-                  We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
-                  <br />
-                  <br />
-                  <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
+              <div class="services-row">
+                <div class="tennant-rep">
+                  <div class="padded-text">
+                    <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
+                    <br />
+                    Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
+                    <br />
+                    <br />
+                    <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
+                  </div>
+                </div>
+                <div class="landlord-rep">
+                  <div class="padded-text">
+                    <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
+                    <br />
+                    We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
+                    <br />
+                    <br />
+                    <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
+          <!-- </div> -->
         </div>
         <div id="contact-us">
           <div class="contact-content">
