--- a/src/index.html
+++ b/src/index.html
@@ -97,53 +97,50 @@
           <div></div>
         </div>
       </div>
-      <div class="our-services">
-          <!-- <div class="flexbox-full"> -->
-            <div class="services-img">
-              <img src="images/services.jpg">
+      <div class="services-info">
+          <div class="services-img">
+          </div>
+          <div class="services-text">
+            <div class="services-row">
+              <div class="services-header"><p><strong>OUR</strong> SERVICES</p></div>
             </div>
-            <div class="services-info">
-              <div class="services-row">
-                <div class="services-header"><p><strong>OUR</strong> SERVICES</p></div>
-              </div>
-              <div class="services-row">
-                <div class="tennant-rep">
-                  <div class="padded-text">
-                    <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
-                    <br />
-                    Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
-                    <br />
-                    <br />
-                    <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
-                  </div>
+            <div class="services-row">
+              <div class="tennant-rep">
+                <div class="padded-text">
+                  <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
+                  <br />
+                  Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
+                  <br />
+                  <br />
+                  <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
                 </div>
-                <div class="landlord-rep">
-                  <div class="padded-text">
-                    <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
-                    <br />
-                    We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
-                    <br />
-                    <br />
-                    <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
-                  </div>
+              </div>
+              <div class="landlord-rep">
+                <div class="padded-text">
+                  <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
+                  <br />
+                  We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
+                  <br />
+                  <br />
+                  <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
                 </div>
               </div>
             </div>
-          <!-- </div> -->
+          </div>
         </div>
-        <div id="contact-us">
-          <div class="contact-content">
-            <div class="contact-header">
-              <strong>CONTACT</strong> US
-            </div>
-            <div class="contact-body">
-              <ul>
-                <li><img src="images/phone-icon.png" class="icon-small"/>(888)555-4433</li>
-                <li><img src="images/email-icon.png" class="icon-small"/><a href="mailto:info@groundscource.com">info@groundsource.com</a></li>
-                <li><img src="images/location-icon.png" class="icon-small"/><span class="underline">1157 Highland Ave, Los Angeles, CA 90028</span></li>
-                <li><img src="images/ig-icon.png" class="icon-small"/><a href="https://www.instagram.com/groundsource">@groundsource</a></li>
-              </ul>
-            </div>
+      </div>
+      <div id="contact-us">
+        <div class="contact-content">
+          <div class="contact-header">
+            <strong>CONTACT</strong> US
+          </div>
+          <div class="contact-body">
+            <ul>
+              <li><img src="images/phone-icon.png" class="icon-small"/>(888)555-4433</li>
+              <li><img src="images/email-icon.png" class="icon-small"/><a href="mailto:info@groundscource.com">info@groundsource.com</a></li>
+              <li><img src="images/location-icon.png" class="icon-small"/><span class="underline">1157 Highland Ave, Los Angeles, CA 90028</span></li>
+              <li><img src="images/ig-icon.png" class="icon-small"/><a href="https://www.instagram.com/groundsource">@groundsource</a></li>
+            </ul>
           </div>
         </div>
       </div>
