--- a/src/index.html
+++ b/src/index.html
@@ -98,36 +98,31 @@
         </div>
       </div>
       <div class="services-info">
-          <div class="services-img">
+        <div class="services-img"></div>
+        <div class="services-content">
+          <div class="services-row">
+            <div class="services-header"><p><strong>OUR</strong> SERVICES</p></div>
           </div>
-          <div class="services-text">
-            <div class="services-row">
-              <div class="services-header"><p><strong>OUR</strong> SERVICES</p></div>
+          <div class="services-row">
+            <div class="tennant-rep services-text">
+              <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
+              <br />
+              Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
+              <br />
+              <br />
+              <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
             </div>
-            <div class="services-row">
-              <div class="tennant-rep">
-                <div class="padded-text">
-                  <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
-                  <br />
-                  Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
-                  <br />
-                  <br />
-                  <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
-                </div>
-              </div>
-              <div class="landlord-rep">
-                <div class="padded-text">
-                  <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
-                  <br />
-                  We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
-                  <br />
-                  <br />
-                  <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
-                </div>
-              </div>
+            <div class="landlord-rep services-text">
+              <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
+              <br />
+              We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
+              <br />
+              <br />
+              <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
             </div>
           </div>
         </div>
+      </div>
       </div>
       <div id="contact-us">
         <div class="contact-content">
