better organize review slideshow css.

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
           <img src="images/about-us.jpg" class="image-medium"/>
         </div>
       </div>
-      <div class="horizontal-break">
+      <div class="review-slideshow">
         <div id="navigator-arrow-left" class="navigation-arrows">
         </div>
          <div id="review1" class="review">
