Place navigator into the 1800 flexbox.'

--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,8 @@
         </div>
       </div>
       <div class="review-slideshow">
-        <div id="navigator-arrow-left" class="navigation-arrows">
-        </div>
+        <div class="flexbox">
+        <div id="navigator-arrow-left" class="navigation-arrows"></div>
          <div id="review1" class="review">
         </div>
         <div id="review2" class="review">
@@ -87,14 +87,14 @@
         </div>
         <div id="review5" class="review">
         </div>
-        <div id="navigator-arrow-right" class="navigation-arrows">
-        </div>
+        <div id="navigator-arrow-right" class="navigation-arrows"></div>
         <div id="review-navigator">
           <div></div>
           <div></div>
           <div class="selected"></div>
           <div></div>
           <div></div>
+        </div>
         </div>
       </div>
       <div class="services-info">
