--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,24 @@
     });</script>
   </head>
   <body>
+     <div id="top-nav">
+      <ul>
+        <li><a href="/listings.html">LISTINGS</a></li>
+        <li><a href="/experience.html">EXPERIENCE</a></li>
+        <li><a href="/about.html">ABOUT</a</li>
+        <li><a href="#">CONTACT<a/></li>
+      </ul>
+    </div>
     <div class="ham-menu"></div>
     <div class="nav-modal">
       <div class="inner">
         <img src="images/logo.png" class="modal-logo"/>
         <div class="menu-close"></div>
         <ul class="nav">
-          <li><a href="/">HOME</a></li>
-          <li><a class="active" href="/about.html">ABOUT</a></li>
+          <li><a class="active" href="/">HOME</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
           <li><a href="/listings.html">LISTINGS</a></li>
-          <li><a href="#">PROJECTS</a></li>
+          <li><a href="#">EXPERIENCE</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
@@ -51,21 +59,19 @@
       </div>
     </div>
     <div class="content">
-      <div class="flexbox">
-        <div class="home-intro header-overlap">
-            <div>
-                <div class="section-header">
-                  ABOUT &nbsp; <img src="images/logo.png" class="logo-small"/>
-                </div>
-                <p>
-                  GROUNDSOURCE is a Los Angeles-based full-service real estate firm that specializes in representing tenants, landlords and investors. Our forty-five years of collective experience in the L.A. marketplace lets us combine extensive insider knowledge with trusted partnerships to create unparalleled value. We’re a boutique firm that offers clients the prestigious service they deserve with an intimate, hands-on approach.
-                  We believe it isn’t just about satisfied clients, it’s about repeat clients. Therefore, we always spend as much time as it takes to close the deal the right way. For us, good business is about a connection, not a commission which is why at GROUNDSOURCE we’re by your side from the fact-finding to the lease signing and every step along the way.
-                </p>
+      <div class="flexbox-full">
+        <div class="home-intro-left">
+          <div>
+            <div class="section-header">
+              ABOUT &nbsp; <img src="images/logo.png" class="logo-small"/>
             </div>
+            <p>
+              GROUNDSOURCE is a Los Angeles-based full-service real estate firm that specializes in representing tenants, landlords and investors. Our forty-five years of collective experience in the L.A. marketplace lets us combine extensive insider knowledge with trusted partnerships to create unparalleled value. We’re a boutique firm that offers clients the prestigious service they deserve with an intimate, hands-on approach.
+              We believe it isn’t just about satisfied clients, it’s about repeat clients. Therefore, we always spend as much time as it takes to close the deal the right way. For us, good business is about a connection, not a commission which is why at GROUNDSOURCE we’re by your side from the fact-finding to the lease signing and every step along the way.
+            </p>
+          </div>
         </div>
-        <div class="home-intro">
-          <img src="images/about-us.jpg" class="image-medium"/>
-        </div>
+        <div class="home-intro-right"></div>
       </div>
       <div class="review-slideshow">
         <div class="flexbox">
@@ -174,6 +180,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       $(document).ready(function(){
+        $(window).scroll(function() {
+          if (window.pageYOffset >= 67) {
+            $('#top-nav').hide();
+            $('.ham-menu').show();
+          }
+          if (window.pageYOffset < 67) {
+            $('#top-nav').show();
+            $('.ham-menu').hide();
+          }
+        })
         $('.ham-menu, .menu-close').click(function(){
           $('.nav-modal').fadeToggle();
         });
