--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
     <div id="header-home">
       <div id="header-content">
         <img id="header-logo" src="images/logo.png" alt=""/>
-        <div id="header-text">LOCAL BY CHOICE, NOT BY CHANCE</div>
-        <img src="images/scroll-arrow.png" class="scroll-arrow"/>
+        <div id="header-text"><strong>LOCAL BY CHOICE, NOT BY CHANCE</strong></div>
       </div>
+      <img src="images/scroll-arrow.png" class="scroll-arrow"/>
     </div>
     <div class="content">
       <div class="flexbox-full">
