--- a/src/listings.html
+++ b/src/listings.html
@@ -20,125 +20,53 @@
     <!-- css files will be automatically insert here -->
     <!-- endinject -->
     <!-- endbuild -->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+    <script type="text/javascript">WebFont.load({
+    google: {
+        families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]
+    }
+    });</script>
   </head>
   <body>
-    <!-- <img src="images/background.png" id="background-header" /> -->
-    <div id="container-listings" class="container-fluid">
-      <img src="images/logo.png" class="logo-upper-left"/>
-      <div class="ham-menu"></div>
-      <div class="nav-modal">
-        <div class="inner">
-          <img src="images/logo.png" class="modal-logo"/>
-          <div class="menu-close"></div>
-          <ul class="nav">
-            <li><a href="/">HOME</a></li>
-            <li><a href="/about.html">ABOUT</a></li>
-            <li><a class="active" href="/listings.html">LISTINGS</a></li>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">CONTACT</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="header-listings" class="background-header"></div>
-      <div id="listings-content">
-        <div id="header-text-listings"><strong>PLAYA</strong> JEFFERSON</div>
-        <div class="container">
-          <div id="listings-sidebar">
-            <div class="menu-top">
-              <div class="buttons">
-                <a href="#" class="cool-button">CHECK AVAILABILITY</a>
-                <a href="#" class="cool-button">REQUEST BROCHURE</a>
-              </div>
-            </div>
-            <div class="menu">
-              <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
-              <hr class ="light-line">
-              <ul class="bond-list">
-                <li>200,000 SQ FT</li>
-                <hr>
-                <li>CENTRAL LOCATION</li>
-                <hr>
-                <li>INSPIRING ARCHITECTURE</li>
-                <hr>
-                <li>GREEN FRIENDLY</li>
-                <hr>
-              </ul>
-              <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
-              <hr class="light-line">
-              <ul class="bond-list">
-                <li>FIBER INTERNET</li>
-                <hr>
-                <li>COMMUNAL BIKES</li>
-                <hr>
-                <li>OUTDOOR MEETING / DINING</li>
-                <hr>
-                <li>VIBRANT LANDSCAPING</li>
-                <hr>
-                <li>ONSITE SECURITY</li>
-                <hr>
-
-                <li>COMPLIMENTARY CLEANING SERVICE</li>
-              </ul>
-            </div>
-          </div>
-          <div id="listings-info">
-            <div class="info-box">
-              <div class="info-text">
-                <h2 class="title">
-                  <strong>CREATIVE OFFICE SPACE AT</strong></br>
-                  THE HEART OF SILICON BEACH.
-                </h2>
-                <p>Playa Jefferson is a dynamic office campus located in Playa Vista.
-                The campus features over 200,000 square feet of creative office space, with
-                dramatic and distincitive architecure, substantial experior shared communal
-                space, easy access to both the 90 and the 405 freeways, and is directly across
-                the street from all of the amenitite at Runway Playa Vista.
-                </p>
-              </div>
-              <div class="info-image-gallery">
-                <img src="images/example.jpg" class="img-responsive"/>
-                <div class="gallery-controls">
-                  <img id="gallery-arrow-left" src="images/listings-arrow-lft.png" />
-                  <img id="gallery-arrow-right" src="images/listings-arrow-rt.png" />
-                </div>
-              </div>
-            </div>
-            <div class="info-box">
-              <h2 class="title subdued">LOCATION</h2>
-              <img src="images/fake-map.jpg" class="img-responsive" />
-              <h2 class="title subdoed">FLOORPLAN</h2>
-              <img src="images/fake-plans.jpg" class="img-responsive" />
-            </div>
-          </div>
-        </div>
+     <div id="top-nav">
+      <ul>
+        <li><a href="/listings.html">LISTINGS</a></li>
+        <li><a href="/experience.html">EXPERIENCE</a></li>
+        <li><a href="/about.html">ABOUT</a</li>
+        <li><a href="#">CONTACT<a/></li>
+      </ul>
+    </div>
+    <div class="ham-menu"></div>
+    <div class="nav-modal">
+      <div class="inner">
+        <img src="images/logo.png" class="modal-logo"/>
+        <div class="menu-close"></div>
+        <ul class="nav">
+          <li><a class="active" href="/">HOME</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
+          <li><a href="/listings.html">LISTINGS</a></li>
+          <li><a href="#">EXPERIENCE</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
       </div>
     </div>
     <div id="footer">
       <div class="column">
-        <div class="title">SEARCH</div>
+        <div class="title">LISTINGS</div>
         <a href="#">Properties For Sale</a>
         <a href="#">Properties For Lease</a>
-        <a href="#">Find a Broker</a>
       </div>
       <div class="column">
-        <div class="title">PRODUCTS &amp; SERVICES</div>
-        <a href="#">Product Overview</a>
-        <a href="#">Premium Lister</a>
-        <a href="#">Premium Searcher</a>
+        <div class="title">EXPERIENCE</div>
+        <a href="#">Case Studies</a>
+        <a href="#">Testimonials</a>
       </div>
       <div class="column">
-        <div class="title">RESOURCES</div>
-        <a href="#">Help</a>
-        <a href="#">Contact Us</a>
-        <a href="#">Add Listing</a>
-        <a href="#">Market Trends</a>
+        <div class="title">ABOUT</div>
+        <a href="#">Meet the Team</a>
       </div>
       <div class="column">
-        <div class="title">COMPANY</div>
-        <a href="#">About Us</a>
-        <a href="#">LoopNet Blog</a>
-        <a href="#">Terms of Use</a>
-        <a href="#">Privacy Policy</a>
+        <div class="title">CONTACT</div>
       </div>
       <div class="column social">
         <a href="#" target="_blank">
@@ -156,27 +84,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       $(document).ready(function(){
+        $(window).scroll(function() {
+          if (window.pageYOffset >= 67) {
+            $('#top-nav').hide();
+            $('.ham-menu').show();
+          }
+          if (window.pageYOffset < 67) {
+            $('#top-nav').show();
+            $('.ham-menu').hide();
+          }
+        })
+        $(".scroll-arrow").click(function() {
+          window.scrollTo(0, $('#header-home').height());
+        });
+
         $('.ham-menu, .menu-close').click(function(){
           $('.nav-modal').fadeToggle();
         });
     });
     </script>
-
-    <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp inject` to automatically populate bower script dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <!-- inject:js -->
-    <!-- js files will be automatically insert here -->
-    <!-- endinject -->
-
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
-
   </body>
-</html>
