--- a/src/listings.html
+++ b/src/listings.html
@@ -28,26 +28,68 @@
     });</script>
   </head>
   <body>
-     <div id="top-nav">
+    <div id="container-listings">
+      <img src="images/logo.png" class="logo-upper-left"/>
+    <!-- <div id="top-nav">
       <ul>
-        <li><a href="/listings.html">LISTINGS</a></li>
+        <li><a href="/index.html">HOME</a></li>
         <li><a href="/experience.html">EXPERIENCE</a></li>
         <li><a href="/about.html">ABOUT</a</li>
         <li><a href="#">CONTACT<a/></li>
       </ul>
-    </div>
-    <div class="ham-menu"></div>
-    <div class="nav-modal">
-      <div class="inner">
-        <img src="images/logo.png" class="modal-logo"/>
-        <div class="menu-close"></div>
-        <ul class="nav">
-          <li><a class="active" href="/">HOME</a></li>
-          <li><a href="/about.html">ABOUT</a></li>
-          <li><a href="/listings.html">LISTINGS</a></li>
-          <li><a href="#">EXPERIENCE</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
+    </div> -->
+      <div class="ham-menu"></div>
+      <div class="nav-modal">
+        <div class="inner">
+          <img src="images/logo.png" class="modal-logo"/>
+          <div class="menu-close"></div>
+          <ul class="nav">
+            <li><a href="/">HOME</a></li>
+            <li><a href="/about.html">ABOUT</a></li>
+            <li><a class="active" href="/listings.html">LISTINGS</a></li>
+            <li><a href="#">EXPERIENCE</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </div>
+      </div>
+        <div class="content">
+          <div class="header">
+            <h4>LOREM IPSUM DOLOR SIT AMET</h4>
+            <p>
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+              eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+            </p>
+            <input type="text" placeholder="Search properties">
+            <div class="submenu">
+              <div class="plus-sign">+</div>LOOKING FOR CERTAIN FEATURES
+            </div>
+          </div>
+
+          <flexbox>
+            <div class="listing-preview">
+
+            </div>
+          </flexbox>
+
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+        </div>
       </div>
     </div>
     <div id="footer">
@@ -84,20 +126,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       $(document).ready(function(){
-        $(window).scroll(function() {
-          if (window.pageYOffset >= 67) {
-            $('#top-nav').hide();
-            $('.ham-menu').show();
-          }
-          if (window.pageYOffset < 67) {
-            $('#top-nav').show();
-            $('.ham-menu').hide();
-          }
-        })
-        $(".scroll-arrow").click(function() {
-          window.scrollTo(0, $('#header-home').height());
-        });
-
         $('.ham-menu, .menu-close').click(function(){
           $('.nav-modal').fadeToggle();
         });
