--- a/src/listings.html
+++ b/src/listings.html
@@ -65,12 +65,78 @@
             </div>
           </div>
 
-          <flexbox>
+          <div class="flexbox">
             <div class="listing-preview">
-
+              <div class="header">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
+              </div>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
+              </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
             </div>
-          </flexbox>
-
+            <div class="listing-preview">
+              <div class="header">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
+              </div>
+            </div>
+            <div class="listing-preview">
+              <div class="header">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flexbox">
+            <div class="listing-preview">
+              <div class="header">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
+              </div>
+            </div>
+            <div class="listing-preview">
+              <div class="header">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
+              </div>
+            </div>
+            <div class="listing-preview">
+              <div class="header">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
+              </div>
+            </div>
+          </div>
           <br />
           <br />
           <br />
