Listings-preview section looking good.. will need some fine-tuning.

--- a/src/listings.html
+++ b/src/listings.html
@@ -30,14 +30,6 @@
   <body>
     <div id="container-listings">
       <img src="images/logo.png" class="logo-upper-left"/>
-    <!-- <div id="top-nav">
-      <ul>
-        <li><a href="/index.html">HOME</a></li>
-        <li><a href="/experience.html">EXPERIENCE</a></li>
-        <li><a href="/about.html">ABOUT</a</li>
-        <li><a href="#">CONTACT<a/></li>
-      </ul>
-    </div> -->
       <div class="ham-menu"></div>
       <div class="nav-modal">
         <div class="inner">
@@ -65,7 +57,7 @@
             </div>
           </div>
 
-          <div class="flexbox">
+          <div class="flexbox listings">
             <div class="listing-preview">
               <div class="header">
                 <div class="label">RENT</div>
@@ -97,6 +89,20 @@
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
+              </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
             </div>
             <div class="listing-preview">
               <div class="header">
@@ -105,35 +111,91 @@
                   <div>2467 JEFFERSON AVE,</div>
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
+              </div>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
+              </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
               </div>
             </div>
           </div>
           <div class="flexbox">
             <div class="listing-preview">
               <div class="header">
-                <div class="label">RENT</div>
+                <div class="label lease">LEASE</div>
                 <div class="address">
                   <div>2467 JEFFERSON AVE,</div>
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
+              </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
             </div>
             <div class="listing-preview">
               <div class="header">
-                <div class="label">RENT</div>
+                <div class="label lease">LEASE</div>
                 <div class="address">
                   <div>2467 JEFFERSON AVE,</div>
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
               </div>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
+              </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
+              </div>
             </div>
             <div class="listing-preview">
               <div class="header">
-                <div class="label">RENT</div>
+                <div class="label lease">LEASE</div>
                 <div class="address">
                   <div>2467 JEFFERSON AVE,</div>
                   <div><strong>PLAYA</strong> VISTA</div>
                 </div>
+              </div>
+              <div class="content">
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                </p>
+                <div class="amenities">
+                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                </div>
+              </div>
+              <div class="footer">
+                <strong>$4,500</strong> per month
               </div>
             </div>
           </div>
