Put in bare-bones markup for paginator navigation.

--- a/src/listings.html
+++ b/src/listings.html
@@ -44,179 +44,166 @@
           </ul>
         </div>
       </div>
-        <div class="content">
-          <div class="header">
-            <h4>LOREM IPSUM DOLOR SIT AMET</h4>
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-              eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-            </p>
-            <input type="text" placeholder="Search properties">
-            <div class="submenu">
-              <div class="plus-sign">+</div>LOOKING FOR CERTAIN FEATURES
+      <div class="content">
+        <div class="header">
+          <h4>LOREM IPSUM DOLOR SIT AMET</h4>
+          <p>
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+          </p>
+          <input type="text" placeholder="Search properties">
+          <div class="submenu">
+            <div class="plus-sign">+</div>LOOKING FOR CERTAIN FEATURES
+          </div>
+        </div>
+        <div class="flexbox listings">
+          <div class="listing-preview">
+            <div class="header">
+              <div class="label">RENT</div>
+              <div class="address">
+                <div>2467 JEFFERSON AVE,</div>
+                <div><strong>PLAYA</strong> VISTA</div>
+              </div>
+            </div>
+            <div class="content">
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+              </p>
+              <div class="amenities">
+                <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+              </div>
+            </div>
+            <div class="footer">
+              <strong>$4,500</strong> per month
             </div>
           </div>
-
-          <div class="flexbox listings">
-            <div class="listing-preview">
-              <div class="header">
-                <div class="label">RENT</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="footer">
-                <strong>$4,500</strong> per month
+          <div class="listing-preview">
+            <div class="header">
+              <div class="label">RENT</div>
+              <div class="address">
+                <div>2467 JEFFERSON AVE,</div>
+                <div><strong>PLAYA</strong> VISTA</div>
               </div>
             </div>
-            <div class="listing-preview">
-              <div class="header">
-                <div class="label">RENT</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="footer">
-                <strong>$4,500</strong> per month
+            <div class="content">
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+              </p>
+              <div class="amenities">
+                <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
               </div>
             </div>
-            <div class="listing-preview">
-              <div class="header">
-                <div class="label">RENT</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="footer">
-                <strong>$4,500</strong> per month
-              </div>
+            <div class="footer">
+              <strong>$4,500</strong> per month
             </div>
           </div>
-          <div class="flexbox">
-            <div class="listing-preview">
-              <div class="header">
-                <div class="label lease">LEASE</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="footer">
-                <strong>$4,500</strong> per month
+          <div class="listing-preview">
+            <div class="header">
+              <div class="label">RENT</div>
+              <div class="address">
+                <div>2467 JEFFERSON AVE,</div>
+                <div><strong>PLAYA</strong> VISTA</div>
               </div>
             </div>
-            <div class="listing-preview">
-              <div class="header">
-                <div class="label lease">LEASE</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="footer">
-                <strong>$4,500</strong> per month
+            <div class="content">
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+              </p>
+              <div class="amenities">
+                <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
               </div>
             </div>
-            <div class="listing-preview">
-              <div class="header">
-                <div class="label lease">LEASE</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="footer">
-                <strong>$4,500</strong> per month
-              </div>
+            <div class="footer">
+              <strong>$4,500</strong> per month
             </div>
           </div>
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
-          <br />
+        </div>
+        <div class="flexbox">
+          <div class="listing-preview">
+            <div class="header">
+              <div class="label lease">LEASE</div>
+              <div class="address">
+                <div>2467 JEFFERSON AVE,</div>
+                <div><strong>PLAYA</strong> VISTA</div>
+              </div>
+            </div>
+            <div class="content">
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+              </p>
+              <div class="amenities">
+                <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+              </div>
+            </div>
+            <div class="footer">
+              <strong>$4,500</strong> per month
+            </div>
+          </div>
+          <div class="listing-preview">
+            <div class="header">
+              <div class="label lease">LEASE</div>
+              <div class="address">
+                <div>2467 JEFFERSON AVE,</div>
+                <div><strong>PLAYA</strong> VISTA</div>
+              </div>
+            </div>
+            <div class="content">
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+              </p>
+              <div class="amenities">
+                <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+              </div>
+            </div>
+            <div class="footer">
+              <strong>$4,500</strong> per month
+            </div>
+          </div>
+          <div class="listing-preview">
+            <div class="header">
+              <div class="label lease">LEASE</div>
+              <div class="address">
+                <div>2467 JEFFERSON AVE,</div>
+                <div><strong>PLAYA</strong> VISTA</div>
+              </div>
+            </div>
+            <div class="content">
+              <p>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+              </p>
+              <div class="amenities">
+                <p><img src="images/icons/door.png" /> 3 Rooms</p>
+                <p><img src="images/icons/tub.png" /> 2 Baths</p>
+                <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
+                <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+              </div>
+            </div>
+            <div class="footer">
+              <strong>$4,500</strong> per month
+            </div>
+          </div>
+        </div>
+        <div class="paginator">
+          <div class="navigate"><-</div>
+          <div class="pages">
+            <a href="#">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#">...</a>
+          </div>
+           <div class="navigate">-></div>
         </div>
       </div>
     </div>
